--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
-      run: make
+      run: make INTEGRATION=1
     - name: verify-backup
       run: ./backup.e4 -h
     - name: verify-restore
