--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -30,11 +30,17 @@ jobs:
         cat test | ./restore.e4 restored.img
         echo "*** check file system ***"
         e2fsck -f -y restored.img
-        echo *** loopback setup ***
+        echo "*** loopback setup ***"
         LOOP1=$(losetup -f)
         sudo losetup ${LOOP1} data/10M.img
         LOOP2=$(losetup -f)
         sudo losetup ${LOOP2} restored.img
+        mkdir fs1
+        mkdir fs2
+        sudo mount ${LOOP1} fs1
+        sudo mount ${LOOP2} fs2
+        echo "*** compare files ***"
+        sudo diff -qr fs1/ fs2/
         echo "*** Unzip 1G image ***"
         gunzip data/1G.img.gz
         echo "*** backup ***"
